Added support for audio on linux

--- a/Snek/Snek.csproj
+++ b/Snek/Snek.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="../Assets/Sounds/*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
