--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "preLaunchTask": "build",
       "program": "${workspaceFolder}/Snek/bin/Debug/net7.0/Snek.dll",
       "args": [],
-      "cwd": "${workspaceFolder}/Snek",
+      "cwd": "${workspaceFolder}/Snek/bin/Debug/net7.0/",
       "console": "externalTerminal",
       "stopAtEntry": false
     },
