--- a/Snek/Snek.csproj
+++ b/Snek/Snek.csproj
@@ -5,6 +5,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
+    <RuntimeIdentifiers>linux-x64;win-x64</RuntimeIdentifiers>
+    <PublishTrimmed>true</PublishTrimmed>
+    <TrimMode>Link</TrimMode>
+    <SelfContained>true</SelfContained>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="../Assets/Sounds/*">
