ci: Fix publish command

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
         run: npx semantic-release --branches main --dry-run
 
       - name: Run publish
-        run: dotnet publish -c release -r win-x64 ./SolutionDir -p:Version=${{ env.RELEASE_VERSION }} -o Snek_v${{ env.RELEASE_VERSION }}
+        run: dotnet publish -c release -r win-x64 ./Snek -p:Version=${{ env.RELEASE_VERSION }} -o Snek_v${{ env.RELEASE_VERSION }}
 
       - name: ZIP my-project directory
         run: zip -r Snek_v${{ env.RELEASE_VERSION }}.zip Snek_v${{ env.RELEASE_VERSION }}
