--- a/.releaserc.json
+++ b/.releaserc.json
@@ -15,8 +15,13 @@
         "assets": [
           {
             "path": "build/Snek_win-x64.zip",
-            "label": "build/Snek_${nextRelease.gitTag}_win-x64.zip",
-            "name": "build/Snek_${nextRelease.gitTag}_win-x64.zip"
+            "label": "Snek_${nextRelease.gitTag}_win-x64.zip",
+            "name": "Snek_${nextRelease.gitTag}_win-x64.zip"
+          },
+          {
+            "path": "build/Snek_linux-x64.zip",
+            "label": "Snek_${nextRelease.gitTag}_linux-x64.zip",
+            "name": "Snek_${nextRelease.gitTag}_linux-x64.zip"
           }
         ]
       }
