--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,20 @@
       "request": "launch",
       "preLaunchTask": "build",
       "program": "${workspaceFolder}/Snek/bin/Debug/net7.0/Snek.dll",
-      "args": [],
+      "args": [
+        // "width",
+        // "20",
+        // "height",
+        // "40",
+        // "initialTicksPerSecond",
+        // "10",
+        // "increaseSpeedOnEnemyDestroyed",
+        // "true",
+        // "wallCollisionBehavior",
+        // "Portal"
+        // "audioEnabled",
+        // "true"
+      ],
       "cwd": "${workspaceFolder}/Snek/bin/Debug/net7.0/",
       "console": "externalTerminal",
       "stopAtEntry": false
