docs: launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,18 +11,18 @@
       "preLaunchTask": "build",
       "program": "${workspaceFolder}/Snek/bin/Debug/net7.0/Snek.dll",
       "args": [
-        // "width",
-        // "20",
-        // "height",
-        // "40",
-        // "initialTicksPerSecond",
-        // "10",
-        // "increaseSpeedOnEnemyDestroyed",
-        // "true",
-        // "wallCollisionBehavior",
-        // "Portal"
-        // "audioEnabled",
-        // "true"
+        "--width",
+        "20",
+        "--height",
+        "20",
+        "--initialTicksPerSecond",
+        "6",
+        "--increaseSpeedOnEnemyDestroyed",
+        "true",
+        "--wallCollisionBehavior",
+        "Rebound",
+        "--audioEnabled",
+        "true"
       ],
       "cwd": "${workspaceFolder}/Snek/bin/Debug/net7.0/",
       "console": "externalTerminal",
