feat: adding logging fix: #32

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,19 +11,19 @@
       "preLaunchTask": "build",
       "program": "${workspaceFolder}/Snek/bin/Debug/net7.0/Snek.dll",
       "args": [
-        "-h",
-        "--width",
-        "13",
-        "--height",
-        "7",
-        "--initialTicksPerSecond",
-        "6",
-        "--increaseSpeedOnEnemyDestroyed",
+        // "-h",
+        // "--width",
+        // "13",
+        // "--height",
+        // "7",
+        // "--initialTicksPerSecond",
+        // "6",
+        "--increase-speed",
         "true",
-        "--wallCollisionBehavior",
+        "--collision",
         "Rebound",
-        "--audioEnabled",
-        "true"
+        "--audio",
+        "false"
       ],
       "cwd": "${workspaceFolder}/Snek/bin/Debug/net7.0/",
       "console": "externalTerminal",
