fix: Include error info in cli output

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,19 +11,21 @@
       "preLaunchTask": "build",
       "program": "${workspaceFolder}/Snek/bin/Debug/net7.0/Snek.dll",
       "args": [
-        // "-h",
-        // "--width",
-        // "13",
-        // "--height",
-        // "7",
-        // "--initialTicksPerSecond",
-        // "6",
+        // "--help",
+        "--width",
+        "15",
+        "--height",
+        "15",
+        "--speed",
+        "6",
         "--increase-speed",
         "true",
         "--collision",
         "Rebound",
         "--audio",
-        "false"
+        "false",
+        "--debug",
+        "true"
       ],
       "cwd": "${workspaceFolder}/Snek/bin/Debug/net7.0/",
       "console": "externalTerminal",
