--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
 
   check-release-required:
     runs-on: ubuntu-latest
+    needs: [setup]
     outputs:
       release-required: ${{ steps.fetch-release-version.outputs.RELEASE_REQUIRED }}
     steps:
