--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           dotnet-version: "7.0.x"
 
       - name: Install .Net dependencies
-        run: dotnet restore ./Snek.Console
+        run: dotnet restore
 
   check-release-required:
     runs-on: ubuntu-latest
@@ -41,6 +41,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          echo Current directory
+          pwd
+          echo Contents
+          ls
           npx semantic-release --branches "main" --dry-run
 
           if [[ $RELEASE_VERSION ]]; then echo "RELEASE_REQUIRED=true" >> "$GITHUB_OUTPUT";
