--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,14 @@ jobs:
       - name: Run build
         run: dotnet build
 
+      - name: Fetch release version
+        id: fetch-release-version
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          npx semantic-release --branches "main" --dry-run
+          echo ${{ env.RELEASE_VERSION }} >> "$GITHUB_OUTPUT";
+
   publish-and-pack:
     needs: build-and-test
     runs-on: ubuntu-latest
