--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npx semantic-release --branches "main" --dry-run
-          echo ${{ env.RELEASE_VERSION }} >> "$GITHUB_OUTPUT";
-          echo ${{ env.RELEASE_VERSION }}
+          echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT;
 
   publish-and-pack:
     needs: build-and-test
