--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,10 +43,10 @@ jobs:
         run: |
           npx semantic-release --branches "main" --dry-run
           RELEASE_VERSION=${{ env.RELEASE_VERSION }}
-          echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT;
+          echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> "$GITHUB_OUTPUT"
           echo $RELEASE_VERSION
           echo env.RELEASE_VERSION
-          echo $env.RELEASE_VERSION
+          echo "$env.RELEASE_VERSION"
 
   publish-and-pack:
     needs: build-and-test
