--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -10,34 +10,34 @@ jobs:
     runs-on: ubuntu-latest
     # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
+      output-1: ${{ steps.step1.outputs.TEST_VAR }}
+      output-2: ${{ steps.step2.outputs.TEST_VAR }}
     steps:
       - id: step1
-        run: echo "test=hello.world" >> $GITHUB_OUTPUT
+        run: echo "TEST_VAR=hello.world" >> $GITHUB_OUTPUT
       - id: step2
-        run: echo "test=" >> $GITHUB_OUTPUT
+        run: echo "TEST_VAR=" >> $GITHUB_OUTPUT
 
   # log the outputs from job1
   job2:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
+      - run: echo ${{needs.job1.outputs.output-1}} ${{needs.job1.outputs.output-2}}
 
   # Only log the output1 from job1 if it has a value
   job3:
     runs-on: ubuntu-latest
     needs: job1
-    if: needs.job1.outputs.output1 != ''
+    if: needs.job1.outputs.output-1 != ''
     steps:
-      - run: echo "output1 has a value, ${{needs.job1.outputs.output1}}"
+      - run: echo "output1 has a value, ${{needs.job1.outputs.output-1}}"
 
   # Only log if output1 from job1 does NOT have a value
   job4:
     runs-on: ubuntu-latest
     needs: job1
-    if: needs.job1.outputs.output1 == ''
+    if: needs.job1.outputs.output-1 == ''
     steps:
       - run: echo "output1 has no value"
 
@@ -45,14 +45,14 @@ jobs:
   job5:
     runs-on: ubuntu-latest
     needs: job1
-    if: needs.job1.outputs.output2 != ''
+    if: needs.job1.outputs.output-2 != ''
     steps:
-      - run: echo "output2 has a value, ${{needs.job1.outputs.output2}}"
+      - run: echo "output2 has a value, ${{needs.job1.outputs.output-2}}"
 
   # Only log if output1 from job1 does NOT have a value
   job6:
     runs-on: ubuntu-latest
     needs: job1
-    if: needs.job1.outputs.output2 == ''
+    if: needs.job1.outputs.output-2 == ''
     steps:
       - run: echo "output2 has no value"
