--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,8 @@ jobs:
   release-snek:
     runs-on: ubuntu-latest
     outputs:
-      next-release-version: ${{steps.fetch-next-version.outputs.RELEASE_VERSION}}
-      hello-world: ${{steps.fetch-next-version.outputs.HELLO_WORLD }}
+      next-release-version: ${{steps.output-next-version-to-github.outputs.NEXT_RELEASE_VERSION}}
+      hello-world: ${{steps.output-hello-world-to-github.outputs.HELLO_WORLD }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -48,10 +48,12 @@ jobs:
           echo "release version2: ${{env.RELEASE_VERSION}}"
 
       - name: Output hello world to Github
+        id: output-hello-world-to-github
         run: echo "HELLO_WORLD=hello.world" >> "$GITHUB_OUTPUT"
 
       - name: Output next version to Github
-        run: echo "RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
+        id: output-next-version-to-github
+        run: echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
 
       - name: Run publish Windows
         run: dotnet publish -c release -r win-x64 ./Snek.Console -p:Version=${{ env.RELEASE_VERSION }} -o build/win-x64
