--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,8 @@ jobs:
   release-snek:
     runs-on: ubuntu-latest
     outputs:
-      next-release-version: ${{steps.fetch-next-version.outputs.NEXT_RELEASE_VERSION}}
+      next-release-version: ${{steps.output-next-version-to-github.outputs.NEXT_RELEASE_VERSION}}
+      hello-world: ${{steps.output-hello-world-to-github.outputs.HELLO_WORLD }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -40,46 +41,21 @@ jobs:
         id: fetch-next-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        # the RELEASE_VERSION var is set by sematic-release. See .releaserc.json
-        run: |
-          npx semantic-release --branches "dev" --dry-run
-          echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> $GITHUB_OUTPUT
+        run: npx semantic-release --branches "dev" --dry-run
 
-  check-next-release:
-    needs: release-snek
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log next release version
-        env:
-          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
+      - name: Log Next Version
         run: |
           echo "release version1: $RELEASE_VERSION"
-          echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
+          echo "release version2: ${{env.RELEASE_VERSION}}"
 
-  only-on-next-release:
-    needs: release-snek
-    runs-on: ubuntu-latest
-    if: ${{needs.release-snek.outputs.next-release-version}} != ''
-    env:
-      RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - name: Output hello world to Github
+        id: output-hello-world-to-github
+        run: echo "HELLO_WORLD=hello.world" >> "$GITHUB_OUTPUT"
 
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 18.x
+      - name: Output next version to Github
+        id: output-next-version-to-github
+        run: echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
 
-      - name: Install Node dependencies
-        run: npm install
-
-      - name: Setup .Net
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: "7.0.x"
       - name: Run publish Windows
         run: dotnet publish -c release -r win-x64 ./Snek.Console -p:Version=${{ env.RELEASE_VERSION }} -o build/win-x64
 
@@ -102,3 +78,48 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release --branches dev
+
+  check-next-release:
+    needs: release-snek
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log next release version
+        env:
+          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
+        run: |
+          echo "release version1: $RELEASE_VERSION"
+          echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
+  check-hello-world:
+    needs: release-snek
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log Hello World
+        env:
+          HELLO_WORLD: ${{needs.release-snek.outputs.hello-world}}
+        run: |
+          echo "Says1: $HELLO_WORLD"
+          echo "Says2: ${{needs.release-snek.outputs.hello-world}}"
+
+  only-on-next-release:
+    needs: release-snek
+    runs-on: ubuntu-latest
+    if: ${{needs.release-snek.outputs.next-release-version}} != ''
+    steps:
+      - name: Log next release version if present
+        env:
+          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
+        run: |
+          echo "release version1: $RELEASE_VERSION"
+          echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
+
+  only-on-hello-world:
+    needs: release-snek
+    runs-on: ubuntu-latest
+    if: ${{needs.release-snek.outputs.hello-world}} != ''
+    steps:
+      - name: Log next release version if present
+        env:
+          HELLO_WORLD: ${{needs.release-snek.outputs.hello-world}}
+        run: |
+          echo "Says1: $HELLO_WORLD"
+          echo "Says2: ${{needs.release-snek.outputs.hello-world}}"
