--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       next-release-version: ${{steps.output-next-version-to-github.outputs.NEXT_RELEASE_VERSION}}
-      hello-world: ${{steps.output-hello-world-to-github.outputs.HELLO_WORLD }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -48,13 +47,49 @@ jobs:
           echo "release version1: $RELEASE_VERSION"
           echo "release version2: ${{env.RELEASE_VERSION}}"
 
-      - name: Output hello world to Github
-        id: output-hello-world-to-github
-        run: echo "HELLO_WORLD=hello.world" >> "$GITHUB_OUTPUT"
-
       - name: Output next version to Github
         id: output-next-version-to-github
         run: echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
+
+  check-next-release:
+    needs: release-snek
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log next release version
+        env:
+          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
+        run: |
+          echo "release version1: $RELEASE_VERSION"
+          echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
+
+  only-on-next-release:
+    needs: release-snek
+    runs-on: ubuntu-latest
+    if: ${{needs.release-snek.outputs.next-release-version}} != ''
+    steps:
+      - name: Log next release version if present
+        env:
+          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
+        run: |
+          echo "release version1: $RELEASE_VERSION"
+          echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
+          - name: Checkout repository
+          uses: actions/checkout@v2
+          with:
+            fetch-depth: 0
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18.x
+
+      - name: Install Node dependencies
+        run: npm install
+
+      - name: Setup .Net
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "7.0.x"
 
       - name: Run publish Windows
         run: dotnet publish -c release -r win-x64 ./Snek.Console -p:Version=${{ env.RELEASE_VERSION }} -o build/win-x64
@@ -78,48 +113,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npx semantic-release --branches dev
-
-  check-next-release:
-    needs: release-snek
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log next release version
-        env:
-          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
-        run: |
-          echo "release version1: $RELEASE_VERSION"
-          echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
-  check-hello-world:
-    needs: release-snek
-    runs-on: ubuntu-latest
-    steps:
-      - name: Log Hello World
-        env:
-          HELLO_WORLD: ${{needs.release-snek.outputs.hello-world}}
-        run: |
-          echo "Says1: $HELLO_WORLD"
-          echo "Says2: ${{needs.release-snek.outputs.hello-world}}"
-
-  only-on-next-release:
-    needs: release-snek
-    runs-on: ubuntu-latest
-    if: ${{needs.release-snek.outputs.next-release-version}} != ''
-    steps:
-      - name: Log next release version if present
-        env:
-          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
-        run: |
-          echo "release version1: $RELEASE_VERSION"
-          echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
-
-  only-on-hello-world:
-    needs: release-snek
-    runs-on: ubuntu-latest
-    if: ${{needs.release-snek.outputs.hello-world}} != ''
-    steps:
-      - name: Log next release version if present
-        env:
-          HELLO_WORLD: ${{needs.release-snek.outputs.hello-world}}
-        run: |
-          echo "Says1: $HELLO_WORLD"
-          echo "Says2: ${{needs.release-snek.outputs.hello-world}}"
