--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,10 +66,10 @@ jobs:
     needs: release-snek
     runs-on: ubuntu-latest
     if: ${{needs.release-snek.outputs.next-release-version}} != ''
+    env:
+      RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
     steps:
       - name: Log next release version if present
-        env:
-          RELEASE_VERSION: ${{needs.release-snek.outputs.next-release-version}}
         run: |
           echo "release version1: $RELEASE_VERSION"
           echo "release version2: ${{needs.release-snek.outputs.next-release-version}}"
@@ -93,19 +93,19 @@ jobs:
           dotnet-version: "7.0.x"
 
       - name: Run publish Windows
-        run: dotnet publish -c release -r win-x64 ./Snek.Console "-p:Version=$RELEASE_VERSION" -o build/win-x64
+        run: dotnet publish -c release -r win-x64 ./Snek.Console "-p:Version=${{ env.RELEASE_VERSION }}" -o build/win-x64
 
       - name: ZIP Windows output
         run: cd build/win-x64 && zip -r ../Snek_win-x64.zip * && cd ../..
 
       - name: Run publish Linux
-        run: dotnet publish -c release -r linux-x64 ./Snek.Console "-p:Version=$RELEASE_VERSION" -o build/linux-x64
+        run: dotnet publish -c release -r linux-x64 ./Snek.Console -p:Version=${{ env.RELEASE_VERSION }} -o build/linux-x64
 
       - name: ZIP Linux output
         run: cd build/linux-x64 && zip -r ../Snek_linux-x64.zip * && cd ../..
 
       - name: Run publish OSX
-        run: dotnet publish -c release -r osx-x64 ./Snek.Console "-p:Version=$RELEASE_VERSION" -o build/osx-x64
+        run: dotnet publish -c release -r osx-x64 ./Snek.Console -p:Version=${{ env.RELEASE_VERSION }} -o build/osx-x64
 
       - name: ZIP OSX output
         run: cd build/osx-x64 && zip -r ../Snek_osx-x64.zip * && cd ../..
