--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     outputs:
-      # RELEASE_VERSION set in .releaserc.json
-      next-release-version: ${{steps.fetch-next-version.outputs.RELEASE_VERSION}}
+      next-release-version: ${{steps.fetch-next-version.outputs.NEXT_RELEASE_VERSION}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -44,7 +43,10 @@ jobs:
         id: fetch-next-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: npx semantic-release --branches "dev" --dry-run
+        # RELEASE_VERSION set in .releaserc.json
+        run: |
+          npx semantic-release --branches "dev" --dry-run
+          echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
 
       # - name: Log Next Version
       #   run: |
