--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,22 +39,16 @@ jobs:
       - name: Test
         run: dotnet test
 
-      - name: Fetch release version
+      - name: Fetch next version
         id: fetch-next-version
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           npx semantic-release --branches "dev" --dry-run
-          echo "NEXT_RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
 
-      # - name: Log Next Version
-      #   run: |
-      #     echo "release version1: $RELEASE_VERSION"
-      #     echo "release version2: ${{env.RELEASE_VERSION}}"
-
-      # - name: Output next version to Github
-      #   id: output-next-version-to-github
-      #   run: echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
+      - name: Capture next version
+        id: capture-next-version
+        run: echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
 
   publish-and-release:
     needs: build-and-test
