--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     outputs:
-      next-release-version: ${{steps.fetch-next-version.outputs.NEXT_RELEASE_VERSION}}
+      next-release-version: ${{steps.capture-next-version.outputs.NEXT_RELEASE_VERSION}}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -48,7 +48,7 @@ jobs:
 
       - name: Capture next version
         id: capture-next-version
-        run: echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> "$GITHUB_OUTPUT"
+        run: echo "NEXT_RELEASE_VERSION=${{env.RELEASE_VERSION}}" >> $GITHUB_OUTPUT
 
   publish-and-release:
     needs: build-and-test
