--- a/.releaserc.json
+++ b/.releaserc.json
@@ -9,6 +9,7 @@
         "verifyReleaseCmd": "echo RELEASE_VERSION=${nextRelease.version} >> $GITHUB_ENV"
       }
     ],
+    "@semantic-release/npm",
     [
       "@semantic-release/github",
       {
