--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,6 +35,12 @@
       "name": ".NET Core Attach",
       "type": "coreclr",
       "request": "attach"
+    },
+    {
+      "name": "Launch Snek.Web",
+      "type": "blazorwasm",
+      "request": "launch",
+      "cwd": "${workspaceFolder}/Snek.Web"
     }
   ]
 }
