--- a/.github/workflows/build-test-publish-release.yml
+++ b/.github/workflows/build-test-publish-release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup .Net
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: "7.0.x"
+          dotnet-version: 7.0.x
 
       - name: Install .Net dependencies
         run: dotnet restore
