--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -28,3 +28,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
           FOLDER: build/wwwroot
+      # changes the base-tag in index.html from '/' to 'Snek.Web' to match GitHub Pages repository subdirectory
+      - name: Change base-tag in index.html from / to Snek.Web
+        run: sed -i 's/<base href="\/" \/>/<base href="\/Snek.Web\/" \/>/g' build/wwwroot/index.html
