fix: Change base path in github pages

--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -23,8 +23,8 @@ jobs:
         run: dotnet publish ./Snek.Web -c release -o build --nologo
 
       # changes the base-tag in index.html from '/' to 'Snek.Web' to match GitHub Pages repository subdirectory
-      - name: Change base-tag in index.html from / to Snek.Web
-        run: sed -i 's/<base href="\/" \/>/<base href="\/Snek.Web\/" \/>/g' build/wwwroot/index.html
+      - name: Change base-tag in index.html from / to Snek
+        run: sed -i 's/<base href="\/" \/>/<base href="\/Snek\/" \/>/g' build/wwwroot/index.html
 
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
