--- a/.github/workflows/deploy-to-pages.yml
+++ b/.github/workflows/deploy-to-pages.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Change base-tag in index.html from / to Snek
         run: sed -i 's/<base href="\/" \/>/<base href="\/Snek\/" \/>/g' build/wwwroot/index.html
 
+      # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+      - name: Add .nojekyll file
+        run: touch build/wwwroot/.nojekyll
+
       - name: Commit wwwroot to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
